cert-manager/kuard/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
  namespace: tmp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
