cert-manager/kuard/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  namespace: tmp
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - example.biubiu.org
    secretName: quickstart-example-tls
  rules:
  - host: example.biubiu.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
